# gtk-example

./: CMakeLists.txt  copy_deps  main.c
.github/workflows/: build.yml
